--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,12 +1,14 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
-}
+$entry-file-name: "style";
+
+/**
+ * Abstract
+ * == Contain SCSS and CSS variables and webfonts declarations.
+ */
+
+@import "01-abstract/fonts";
+@import "01-abstract/variables";
+// @import "01-abstract/global";
 
 body {
-  background-color: green;
+  background-color: red;
 }
