--- a/src/scss/01-abstract/_fonts.scss
+++ b/src/scss/01-abstract/_fonts.scss
@@ -4,37 +4,37 @@ $base-font-stack: (
             font-weight: 300,
             font-style: normal,
             font-stretch: normal,
-            src: url('@theme/src/fonts/poppins-v15-latin/poppins-v15-latin-300.woff2') format("woff2")
+            src: url("@theme/src/fonts/poppins-v15-latin/poppins-v15-latin-300.woff2") format("woff2")
         ),
         light-italic: (
             font-weight: 300,
             font-style: italic,
             font-stretch: normal,
-            src: url('@theme/src/fonts/poppins-v15-latin/poppins-v15-latin-300italic.woff2') format("woff2")
+            src: url("@theme/src/fonts/poppins-v15-latin/poppins-v15-latin-300italic.woff2") format("woff2")
         ),
         regular: (
             font-weight: 400,
             font-style: normal,
             font-stretch: normal,
-            src: url('@theme/src/fonts/poppins-v15-latin/poppins-v15-latin-regular.woff2') format("woff2")
+            src: url("@theme/src/fonts/poppins-v15-latin/poppins-v15-latin-regular.woff2") format("woff2")
         ),
         regular-italic: (
             font-weight: 400,
             font-style: italic,
             font-stretch: normal,
-            src: url('@theme/src/fonts/poppins-v15-latin/poppins-v15-latin-italic.woff2') format("woff2")
+            src: url("@theme/src/fonts/poppins-v15-latin/poppins-v15-latin-italic.woff2") format("woff2")
         ),
         medium: (
             font-weight: 500,
             font-style: normal,
             font-stretch: normal,
-            src: url('@theme/src/fonts/poppins-v15-latin/poppins-v15-latin-500.woff2') format("woff2")
+            src: url("@theme/src/fonts/poppins-v15-latin/poppins-v15-latin-500.woff2") format("woff2")
         ),
         bold: (
             font-weight: 700,
             font-style: normal,
             font-stretch: normal,
-            src: url('@theme/src/fonts/poppins-v15-latin/poppins-v15-latin-700.woff2') format("woff2")
+            src: url("@theme/src/fonts/poppins-v15-latin/poppins-v15-latin-700.woff2") format("woff2")
         )
     )
 );
@@ -44,15 +44,10 @@ $base-font-stack: (
         @font-face {
             font-family: "#{$name}";
             font-display: swap;
-
             
             @each $property, $value in $properties {
                 #{$property}: $value;
             }
         }
     }
-}
-
-* {
-    font-family: "poppins";
 }
